# ankiday

./: .gitignore  ANKICONNECT_API.md  LICENSE  README.md  debug_cloze_test.yaml  pyproject.toml  run_ankiday.py
ankiday/: cli.py  config.py
ankiday/backends/: __init__.py  ankiconnect.py  base.py
ankiday/ops/: __init__.py  apply.py
docs/: CLOZE_MODELS.md  SCHEMA.md
examples/: config.cloze.yaml  config.comprehensive.yaml  config.example.yaml  config.with-media.yaml
examples/media/: pronunciation.txt
schema/: ankiday-config.schema.json
tests/: test_config.py  test_media.py  test_media_integration.py  test_schema.py  test_verbose.py
tests/backends/: test_ankiconnect_cloze.py
